SOLUTION of test tast from Tinkoff bank.ipynb

--- a/colab_file_Litvinov.ipynb
+++ b/colab_file_Litvinov.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Литвинов Артем**"
+        "**by JUMEX365**"
       ],
       "metadata": {
         "id": "sbcoHZ8vET1f"
