Update SOLUTION of SQL test task - Tinkoff bank.ipynb

--- a/SOLUTION of SQL test task - Tinkoff bank.ipynb
+++ b/SOLUTION of SQL test task - Tinkoff bank.ipynb
@@ -1942,7 +1942,7 @@
         "\n",
         "Наибольшее подозрение вызывает сотрудник cyanrser, у которого все 70 звонков из 70 оказались со статусом \"Дозвон, Успешно\".\n",
         "\n",
-        "Аналогично и с 0080ovma, но только со статусом \"Дозвон, Успешно\".\n",
+        "Аналогично и с 0080ovma, но только со статусом \"Дозвон, Перезвонить\".\n",
         "\n",
         "100% \"недозвонов\" - тоже аномалия, с которой необходимо разбираться.\n",
         "\n",
